test/files/neg/bad-advice.scala
object Bip
object Test {
  def f(x: Int) = x match {
    case Bip => true
  }
}
